# upgrade-knausj

./: CONTRIBUTING.md  README.md  pyproject.toml
docs/: usage.md
scripts/: publish.sh  update-usage.sh
upgrade_knausj/: cd.py  command_runner.py  core_command_runner.py  error_printing_runner.py  git.py  handle_challenging_commit.py  main.py  repository.py  setup.py  step.py  util.py
upgrade_knausj/conditions/: always_true.py  compound_condition.py  remote_exists.py  repository_exists.py
upgrade_knausj/stdio/: printer.py  prompter.py
upgrade_knausj/steps/: add_remote.py  ask_for_origin_uri.py  clone_repo.py  create_repo.py  fetch_remote.py  initialize_repo.py
upgrade_knausj/types/: condition.py  step.py
upgrade_talon_community/: git.py  handle_challenging_commit.py  main.py  setup.py  util.py
