[tool.poetry]
name = "upgrade-knausj"
version = "0.3.7"
description = ""
authors = ["Pokey Rule <755842+pokey@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "upgrade_knausj" }]


[tool.poetry.scripts]
upgrade-knausj = "upgrade_knausj.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = { extras = ["all"], version = "^0.7.0" }
gitpython = "^3.1.29"
rich = "^12.6.0"
pyyaml = "^6.0"
pre-commit = "^2.20.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
